# TIF-3-MVP

./: .gitignore  README.md  detectron_env.yml
back-tif/: FCOS_INTEGRATION_README.md  database.py  date_ocr_service.py  fcos_integration_example.py  fcos_service.py  main.py  product.py  pyproject.toml  requirements.txt  verify_fcos_setup.py
back-tif/DAN/: DAN.py  resnet.py
back-tif/FCOS/: __init__.py
back-tif/FCOS/adet/: _C.cp38-win_amd64.pyd
back-tif/FCOS/configs/FCOS-Detection/: expiry_dates_R_50_1x.yaml
front-tif/venciScan/: app.json  index.js  package-lock.json  package.json
front-tif/venciScan/app/: _layout.tsx  scan-expiration.tsx
front-tif/venciScan/components/: CalendarPage.tsx  DashboardPage.tsx  Navbar.tsx  ProductDetailModal.tsx  ProductDetailPage.tsx  ProductFormModal.tsx  SimpleDateInput.tsx  SmartDateInput.tsx
front-tif/venciScan/config/: backend.ts
front-tif/venciScan/screens/: ScanPage.tsx
front-tif/venciScan/services/: api.ts
front-tif/venciScan/types/: index.ts
front-tif/venciScan/utils/: dateFormatTest.tsx  dateUtils.test.ts  dateUtils.ts  deleteTest.ts  expirationDateTest.tsx  networkTest.ts  smartDateInputTest.tsx
front-web-tif/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite-env.d.ts  vite.config.ts
front-web-tif/components/: CalendarPage.tsx  ConfirmModal.tsx  DashboardPage.tsx  Navbar.tsx  ProductCard.tsx  ProductDetailModal.tsx  ProductFormModal.tsx  ProductSearch.tsx
front-web-tif/components/icons/: AddIcon.tsx  (+9 more)
front-web-tif/services/: api.ts
(+5 files in other folders)
